add_library(splines
        math_angles.cpp math_angles.h
        math_matrix.cpp math_matrix.h
        math_quaternion.cpp math_quaternion.h
        math_vector.cpp math_vector.h
        q_parse.cpp
        q_shared.cpp q_shared.h
        splines.cpp splines.h
        util_list.h
        util_str.cpp util_str.h
        )
